# RRE

./: CMakeLists.txt  README.md  bubble.c  bubble.h  bullet.c  bullet.h  enemy.c  enemy.h  game.c  game.h  init_sdl.c  load_media.c  load_media.h  main.c  main.h  music.c  music.h  player.c  player.h  power.c  power.h  text.c  text.h
src/game/: bomb.c  bomb.h  bullet.c  bullet.h  enemy.c  enemy.h  enemyp.c  enemyp.h  music.c  music.h  player.c  player.h  point.c  point.h  power.c  power.h
src/mainloop/: game.c  game.h  init_sdl.c  init_sdl.h  load_media.c  main.c  main.h
src/text/: bubble.c  bubble.h  text.c  text.h
